Bubble color hue rotate

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p>Hi! I am Sung-Yan(David) Hsieh.</p>
                 <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
-            <div class="bubbles">
+            <div class="bubbles" id="anchor">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
@@ -132,6 +132,7 @@
                         </p>
                     </div>
                 </div>
+
                 <p id="skills">
                     Skills
                 <div class="skills-content">
