Disable bubble effect

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 <p>Hi! I am Sung-Yan(David) Hsieh.</p>
                 <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
-            <div class="bubbles" id="anchor">
+            <!-- <div class="bubbles" id="anchor">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
                 <img src="images/bubble.png">
-            </div>
+            </div> -->
             <div>
                 <a data-scroll href="#about" class="scroll-down"></a>
             </div>
